@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-11-09T16:12:03Z",
-  "count" : 10,
-  "count_minmax" : [ 10, 10 ],
-  "count_decinc" : [ -0, +10 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2023-11-10T00:43:02Z",
+  "count" : 11,
+  "count_minmax" : [ 10, 11 ],
+  "count_decinc" : [ -0, +11 ],
+  "uniques" : 3,
+  "uniques_minmax" : [ 2, 3 ],
+  "uniques_decinc" : [ -0, +3 ]
 }
