@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-11-09T16:12:03Z",
+  "timestamp" : "2023-11-10T00:43:02Z",
   "count_outdated" : 1877,
   "uniques_outdated" : 643,
-  "count" : 2028,
-  "uniques" : 659,
+  "count" : 2029,
+  "uniques" : 660,
   "views" : [
     {
       "timestamp": "2023-10-29T00:00:00Z",
@@ -88,12 +88,12 @@
     },
     {
       "timestamp": "2023-11-09T00:00:00Z",
-      "count": 10,
-      "count_minmax": [ 10, 10 ],
-      "count_decinc": [ 0, 10 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 11,
+      "count_minmax": [ 10, 11 ],
+      "count_decinc": [ 0, 11 ],
+      "uniques": 3,
+      "uniques_minmax": [ 2, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
