@@ -1,6 +1,6 @@
 {
-  "count": 151,
-  "uniques": 12,
+  "count": 152,
+  "uniques": 13,
   "views": [
     {
       "timestamp": "2023-10-29T00:00:00Z",
@@ -49,8 +49,8 @@
     },
     {
       "timestamp": "2023-11-09T00:00:00Z",
-      "count": 10,
-      "uniques": 2
+      "count": 11,
+      "uniques": 3
     }
   ]
 }
